# fsctype-python

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
fsctype/: __init__.py  config.py  core.py
tests/: __init__.py  quick_test.py  test_fsctype.py
