[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fsctype"
version = "0.1.0"
description = "Fast single-cell type annotation using k-nearest neighbors"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Shahroze Abbas", email = "shahroze@datatecnica.com"},
]
maintainers = [
    {name = "Shahroze Abbas", email = "shahroze@datatecnica.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["single-cell", "cell-type-annotation", "bioinformatics", "scanpy"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "anndata>=0.8.0",
]

[project.optional-dependencies]
scanpy = [
    "scanpy>=1.8.0",
]
plotting = [
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
    "pre-commit>=2.15",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "scanpy>=1.8.0",  # For testing
    "matplotlib>=3.4.0",  # For testing
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "nbsphinx>=0.8",
    "ipython>=7.0",
    "scanpy>=1.8.0",  # For examples
    "matplotlib>=3.4.0",  # For examples
]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "scanpy>=1.8.0",  # For testing neighbor computation
]

[project.urls]
Homepage = "https://github.com/shahrozeabbas/fsctype-python"
Repository = "https://github.com/shahrozeabbas/fsctype-python"
Documentation = "https://fsctype-python.readthedocs.io"
"Bug Tracker" = "https://github.com/shahrozeabbas/fsctype-python/issues"

[tool.setuptools.packages.find]
include = ["fsctype*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=fsctype --cov-report=html --cov-report=term-missing" 